--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -11,4 +11,19 @@ body {
     background-size: cover;
     min-height: 100vh;
     width: 100%;
+    background-repeat: no-repeat;
+    background: fixed;
+}
+
+#text-box {
+    color: bisque;
+    font-size: 62px;
+    font-weight: 300px;
+    text-align: center;
+    position: absolute;
+    top: 15%;
+    left: 35%;
+    width: -50%;
+    text-decoration: underline;
+    
 }
